--- a/src/app/homepage/header/header.component.html
+++ b/src/app/homepage/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="logo">
       <img src="../../assets/Images/brain.png" alt="logo">
     </div>
-    <div class="options_header">
+    <div class="options_header desktop">
       <div class="search item">
         Пошук
       </div>
@@ -18,6 +18,29 @@
       </div>
       <div class="sign_in item border">
         Ввійти
+      </div>
+
+    </div>
+    <div class="options-mob">
+      <div class="menu" (click)="openMenu()">
+        <img src="../../../assets/menu.png" alt="">
+      </div>
+      <div class="menu-list" *ngIf="isOpen">
+        <div class="search item">
+          Пошук
+        </div>
+        <div class="teachers item">
+          Вчителі
+        </div>
+        <div class="base item base">
+          Нормативна база
+        </div>
+        <div class="courses item">
+          Курси
+        </div>
+        <div class="sign_in item border">
+          Ввійти
+        </div>
       </div>
     </div>
   </div>
