--- a/src/app/homepage/header/header.component.scss
+++ b/src/app/homepage/header/header.component.scss
@@ -5,18 +5,32 @@
 }
 .header_line {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10%;
 }
 
 .logo {
-  display: flex;
-}
-
-.logo>img{
   width: 147px;
   height: 62px;
-  margin: 20px;
-  margin-left: 40px;
+    img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+
 }
+.menu-list{
+  position: absolute;
+  right: 8px;
+  background: white;
+  z-index: 2;
+}
+// .logo>img{
+//   width: 147px;
+//   height: 62px;
+//   margin: 20px;
+//   margin-left: 40px;
+// }
 
 .options_header {
   width: 1440px;
@@ -25,8 +39,26 @@
   display: flex;
   justify-content: flex-end;
   margin-left: 150px;
-}
+  &.desktop{
+    @media screen and (max-width:768px){
+      display: none;
+    }
 
+  }
+
+}
+.options-mob{
+  @media screen and (min-width:769px) {
+    display: none;
+  }
+  .menu{
+  width: 30px;
+  height: 30px;
+  img{
+    max-width: 100%;
+    max-height: 100%;
+  }}
+}
 .item {
   width: 41px;
   height: 17px;
