--- a/src/app/homepage/hero-banner/hero-banner.component.html
+++ b/src/app/homepage/hero-banner/hero-banner.component.html
@@ -19,9 +19,6 @@
     </div>
   </div>
   <div class="yellow_rectangle">
-    <div class="rectangle_right">
-      <img src="../../assets/Images/Pencils_hb.jpg" alt="">
-
-    </div>
+    <img src="../../assets/Image (1).png" alt="">
   </div>
 </div>
