--- a/src/app/homepage/hero-banner/hero-banner.component.scss
+++ b/src/app/homepage/hero-banner/hero-banner.component.scss
@@ -1,7 +1,6 @@
 .rectangle {
-  width: 50%;
+  width: 1440PX;
   height: 680px;
-  background-color: #4299ff;
   display: flex;
   flex-direction: row;
 
@@ -72,7 +71,22 @@
   margin-top: -30px;
 }
 
-.rectangle_right {
+// .rectangle_right {
+//   // width: 50%;
+//   height: 680px;
+// }
+
+.blue_rectangle {
   width: 50%;
+  background-color: #4299ff;
+
+}
+
+.yellow_rectangle {
+  width: 50%;
+}
+
+.yellow_rectangle>img {
+  width: 100%;
   height: 680px;
 }
