--- a/src/app/homepage/hero-banner/hero-banner.component.scss
+++ b/src/app/homepage/hero-banner/hero-banner.component.scss
@@ -1,10 +1,4 @@
-.rectangle {
-  width: 1440PX;
-  height: 680px;
-  display: flex;
-  flex-direction: row;
-
-}
+* {margin: 0; max-width: 100%}
 
 .text_big {
   margin-left: 139px;
@@ -81,7 +75,11 @@
 .rectangle_right {
   width: 720px;
   height: 680px;
+}
 
+.rectangle_right img {
+  width: 100%;
+  height: 100%;
 }
 
 .blue_rectangle {
