--- a/src/app/homepage/hero-banner/hero-banner.component.html
+++ b/src/app/homepage/hero-banner/hero-banner.component.html
@@ -19,6 +19,6 @@
     </div>
   </div>
   <div class="yellow_rectangle">
-    <img src="../../assets/Image (1).png" alt="pencil">
+    <!-- <img src="../../assets/Image (1).png" alt="pencil"> -->
   </div>
 </div>
