--- a/src/app/homepage/hero-banner/hero-banner.component.scss
+++ b/src/app/homepage/hero-banner/hero-banner.component.scss
@@ -89,3 +89,11 @@
   width: 720px;
   height: 680px
 }
+.yellow_rectangle {
+  background-image: url("../../../assets/pencil.png");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
