fix hero-banner width

--- a/src/app/homepage/hero-banner/hero-banner.component.html
+++ b/src/app/homepage/hero-banner/hero-banner.component.html
@@ -19,6 +19,7 @@
     </div>
   </div>
   <div class="yellow_rectangle">
-    <img src="../../assets/Image (1).png" alt="">
+      <!-- <img src="../../assets/Images/pencils_1.png" alt=""> -->
+
   </div>
 </div>
