--- a/src/app/homepage/benefits/benefits.component.html
+++ b/src/app/homepage/benefits/benefits.component.html
@@ -18,6 +18,17 @@
     <div class="actual third">
       Будь Актуальним
     </div>
+  </div>
+  <div class="same_text">
+    <div class="same one">
+      Це щорічна національна премія для вчителів-агентів освітянських змін.
+    </div>
+    <div class="same two">
+      Це щорічна національна премія для вчителів-агентів освітянських змін.
+    </div>
+    <div class="same three">
+      Це щорічна національна премія для вчителів-агентів освітянських змін.
+    </div>
 
   </div>
 
