--- a/src/app/homepage/hero-banner/hero-banner.component.scss
+++ b/src/app/homepage/hero-banner/hero-banner.component.scss
@@ -76,12 +76,13 @@
   height: 680px;
   display: flex;
   flex-direction: row;
+  margin-top: 40px;
+
 }
 
 .rectangle_right {
   width: 720px;
   height: 680px;
-  padding-top: 40px;
 
 }
 
