--- a/src/app/homepage/benefits/benefits.component.scss
+++ b/src/app/homepage/benefits/benefits.component.scss
@@ -38,9 +38,7 @@
   display: flex;
   justify-content: space-between;
   flex-grow: 1;
-  // margin-left: 120px;
-  // margin-right: 100px;
-  // margin-top: 40px;
+  margin-top: 30px;
 }
 
 .actual {
@@ -58,4 +56,26 @@
 
 .first {
   margin-left: 140px;
+}
+
+.same_text {
+  display: flex;
+  justify-content: space-between;
+}
+.same {
+  width: 370px;
+  height: 50px;
+  font-family: OpenSans;
+  font-size: 20px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ffffff;
+  padding: 10px;
+}
+
+.one {
+  margin-left: 80px;
 }
