--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,4 +2,5 @@
 <app-header></app-header>
 <app-hero-banner></app-hero-banner>
 <app-about-us></app-about-us>
+<app-news></app-news>
 <!-- <app-benefits></app-benefits> -->
