converted about-us to uppercase

--- a/src/app/homepage/about-us/about-us.component.html
+++ b/src/app/homepage/about-us/about-us.component.html
@@ -3,8 +3,8 @@
     <div class="back-block"></div>
   </div>
   <div class="second-block">
-    <div class="blue-text">Про нас</div>
-    <div class="title">Що таке Гільдія Вчителів?
+    <div class="blue-text">ПРО НАС</div>
+    <div class="title">ЩО ТАКЕ ГІЛЬДІЯ ВЧИТЕЛІВ?
       </div>
       <div class="description">
           Це щорічна національна премія для вчителів-агентів освітянських змін. Премія покликана відзначити досягнення вчителя не лише щодо своїх учнів.
