--- a/src/app/homepage/origin-team/origin-team.component.html
+++ b/src/app/homepage/origin-team/origin-team.component.html
@@ -3,10 +3,12 @@
     ОРГАНІЗАЦІЯ
   </div>
   <div class="our_team">
-    НАША ОРГАНІЗАЦІЯ
+    НАША КОМАНДА
   </div>
   <div class="text">
-    Дружня команда однодумців що вболівають <br>за сучасну Українську освіту.
+    Дружня команда однодумців що вболівають
+    <div class="second_line">за сучасну Українську освіту.
+    </div>
   </div>
 
 
