--- a/src/app/homepage/origin-team/origin-team.component.scss
+++ b/src/app/homepage/origin-team/origin-team.component.scss
@@ -27,12 +27,12 @@
   line-height: normal;
   letter-spacing: 0.8px;
   color: #151719;
-  margin-left: 630px;
+  margin-left: 665px;
   margin-top: 20px;
 }
 
 .text {
-  width: 402px;
+  width: 500px;
  height: 50px;
  font-family: OpenSans;
  font-size: 18.5px;
@@ -42,6 +42,8 @@
  line-height: normal;
  letter-spacing: normal;
  color: #656565;
- margin-left: 630px;
+ margin-left: 600px;
  margin-top: 20px;
+ text-align: center;
+
 }
