add logos & footer components upd

--- a/src/app/homepage/footer/footer.component.html
+++ b/src/app/homepage/footer/footer.component.html
@@ -1,3 +1,22 @@
-<p>
-  footer works!
-</p>
+<div class="footer">
+  <div class="logo">
+    <img src="../../assets/Images/guildLogo.png" alt="">
+  </div>
+  <div class="connections">
+    <div class="FAQ">
+      Типові запитання
+    </div>
+    <div class="connect-us">
+      Зв'язатися з нами
+    </div>
+    <div class="twitter-icon">
+      <img src="../../assets/Images/Icons/Twitter.png" alt="Twitter">
+    </div>
+    <div class="fb-icon">
+      <img src="../../assets/Images/Icons/Facebook.png" alt="Our Facebook">
+    </div>
+    <div class="instagram-icon">
+      <img src="../../assets/Images/Icons/Instagram.png" alt="Follow us on Instagram">
+    </div>
+  </div>
+</div>
