--- a/src/app/homepage/footer/footer.component.scss
+++ b/src/app/homepage/footer/footer.component.scss
@@ -10,15 +10,21 @@
     width: 142px;
     height: 62px;
     margin-left: 25px;
+    vertical-align:inherit;
+
   }
 
   .connections {
     display: flex;
     flex-direction: row;
+    align-items: center;
   }
 
   .connections > div {
     margin-right: 40px;
+    font-size: 12px;
+    color: #fff;
+    font-family: OpenSans-SemiBold;
   }
 
 
