--- a/src/app/homepage/origin-team/origin-team.component.html
+++ b/src/app/homepage/origin-team/origin-team.component.html
@@ -10,9 +10,56 @@
     <div class="second_line">за сучасну Українську освіту.
     </div>
   </div>
+  <div class="teacher_name_div">
+    <div class="photo_name">
+      <div class="teacher">
+        <img src="/../../../../assets/Images/origin_teachers/Photos/1.png" alt="">
+      </div>
+      <div class="name">
+        Ірина Коропецька
+      </div>
+    </div>
+    <div class="photo_name">
+      <div class="teacher">
+        <img src="/../../../../assets/Images/origin_teachers/Photos/2.png" alt="">
+      </div>
+      <div class="name">
+        Наталія Підлісна
+      </div>
 
+    </div><div class="photo_name">
+      <div class="teacher">
+        <img src="/../../../../assets/Images/origin_teachers/Photos/3.png" alt="">
+      </div>
+      <div class="name">
+        Марія Яцишин
+      </div>
 
+    </div>
+    <div class="photo_name">
+      <div class="teacher">
+        <img src="/../../../../assets/Images/origin_teachers/Photos/4.png" alt="">
+      </div>
+      <div class="name">
+        Людмила Сакович
+      </div>
 
+    </div>
+    <div class="photo_name">
+      <div class="teacher">
+        <img src="/../../../../assets/Images/origin_teachers/Photos/5.png" alt="">
+      </div>
+      <div class="name">
+        Ірина Сорокова
+      </div>
 
+    </div><div class="photo_name">
+      <div class="teacher">
+        <img src="/../../../../assets/Images/origin_teachers/Photos/6.png" alt="">
+      </div>
+      <div class="name">
+        Ольга Доскочинська
+      </div>
 
+    </div>
 </div>
