--- a/src/app/homepage/origin-team/origin-team.component.scss
+++ b/src/app/homepage/origin-team/origin-team.component.scss
@@ -1,3 +1,5 @@
+* {margin: 0; max-width: 100%;}
+
 .main_div {
   width: 100%;
 }
@@ -46,4 +48,57 @@
  margin-top: 20px;
  text-align: center;
 
+}
+
+.teacher_name_div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 20px;
+  @media screen and (max-width:768px){
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.teacher {
+  width: 214px;
+  height: 256px;
+  background-color: #c4c4c4;
+}
+
+.teacher>img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.name_teacher {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 25px;
+  font-family: OpenSans;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.4px;
+  color: #000000;
+  margin-top: 18px;
+}
+
+.name {
+  text-align: center;
+  font-family: OpenSans;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.4px;
+  color: #000000;
 }
