--- a/src/app/homepage/header/header.component.html
+++ b/src/app/homepage/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="header_line">
     <div class="logo">
-      <img src="../../assets/Images/brain.png" alt="logo">
+      <img src="../../assets/Images/guildLogo.png" alt="logo">
     </div>
     <div class="options_header desktop">
       <div class="search item">
