--- a/src/app/registration/sign-in/sign-in.component.html
+++ b/src/app/registration/sign-in/sign-in.component.html
@@ -8,7 +8,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Password</mat-label>
-        <input matInput formControlName="password" placeholder="password">
+        <input matInput formControlName="password" placeholder="password" type="password">
       </mat-form-field>
       <button mat-button [disabled]="!loginForm.valid" class="reg-button">Ввійти</button>
     </form>
