--- a/src/app/registration/sign-up/sign-up.component.html
+++ b/src/app/registration/sign-up/sign-up.component.html
@@ -12,7 +12,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Password</mat-label>
-        <input matInput formControlName="NotHashPassword" placeholder="password">
+        <input matInput formControlName="NotHashPassword" placeholder="password" type="password">
       </mat-form-field>
       <mat-form-field>
         <mat-label>Phone</mat-label>
