sign-in sign-up

--- a/src/app/homepage/header/header.component.scss
+++ b/src/app/homepage/header/header.component.scss
@@ -79,8 +79,14 @@
   width: 108px;
 }
 
-.border {
-  border: 1px solid black;
-  margin-top: 9px;
-  padding: 10px;
-}
+// .border {
+//   border: 1px solid black;
+// }
+
+// .sign-up {
+//   width: 163px;
+//   height: 40px;
+//   background-color: #4299ff;
+//   // border: 1px solid black;
+//
+// }
