--- a/src/app/homepage/news/news.component.html
+++ b/src/app/homepage/news/news.component.html
@@ -3,7 +3,7 @@
   <div class="block-items">
     <div class="item">
       <div class="img">
-        <img src="" alt="">
+        <img src="/../../../../assets/Images/Icons/5c2fe255-2029-4068-8127-fc1ffbeca9f7.svg" alt="">
       </div>
       <div class="date">21 червня 2018</div>
       <div class="title-item">Тема Новини</div>
@@ -11,7 +11,7 @@
     </div>
     <div class="item">
       <div class="img">
-        <img src="" alt="">
+        <img src="/../../../../assets/Images/Icons/39e0aad0-e75f-4e61-9d27-63052e85b2d0.svg" alt="">
       </div>
       <div class="date">21 червня 2018</div>
       <div class="title-item">Тема Новини</div>
@@ -19,7 +19,7 @@
     </div>
     <div class="item">
       <div class="img">
-        <img src="" alt="">
+        <img src="/../../../../assets/Images/Icons/512e93bf-7cf6-46db-b692-69948e41cff0.svg" alt="">
       </div>
       <div class="date">21 червня 2018</div>
       <div class="title-item">Тема Новини</div>
