--- a/src/app/homepage/about-us/about-us.component.scss
+++ b/src/app/homepage/about-us/about-us.component.scss
@@ -8,7 +8,7 @@
         flex-direction:column
     }
     .first-block{
-background-image: url('/assets/Images/pencils_1.png');
+background-image: url('../../../assets/Image.png');
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
@@ -25,7 +25,7 @@ width: 100%;
     width: 536px;
     height: 440px;
     opacity: 0.2;
-    background-color: #ebbf19;
+    background-color: #4255ff;
     position: absolute;
     bottom: 30px;
     right: 39px;
