--- a/src/app/homepage/benefits/benefits.component.html
+++ b/src/app/homepage/benefits/benefits.component.html
@@ -3,9 +3,15 @@
     ПРАЦЮЙ З НАМИ
   </div>
   <div class="white_boxes">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="box">
+      <img src="../../../assets/Alarm_2019-04-07/Alarm.png" alt="">
+    </div>
+    <div class="box">
+      <img src="../../../assets/Jewel_2019-04-07/Jewel.png" alt="">
+    </div>
+    <div class="box">
+      <img src="../../../assets/Trophy_2019-04-07/Trophy.png" alt="">
+    </div>
   </div>
 
   <div class="be_actual">
@@ -16,18 +22,18 @@
       Будь Актуальним
     </div>
     <div class="actual third">
-      Будь Актуальним
+    Професійно
     </div>
   </div>
   <div class="same_text">
     <div class="same one">
-      Це щорічна національна премія для вчителів-агентів освітянських змін.
+        Тримати руку на пульсівсіх освітніх
+        подій України та світу
     </div>
     <div class="same two">
-      Це щорічна національна премія для вчителів-агентів освітянських змін.
-    </div>
+        Проводити свої уроки по-новому, використовуючи кращізразки    </div>
     <div class="same three">
-      Це щорічна національна премія для вчителів-агентів освітянських змін.
+        Це щорічна національна премія для вчителів-агентів освітянських змін. 
     </div>
 
   </div>
