--- a/src/app/our-teacher/user-side/user-side.component.html
+++ b/src/app/our-teacher/user-side/user-side.component.html
@@ -5,6 +5,6 @@
     </div>
     <div class="name">{{i.userName}}</div>
     <div class="descipline">sdfgh</div>
-    <div class="descipline">{{i.subject}}</div>
+   <!-- // <div class="descipline">{{i.subject}}</div> -->
   </div>
 </div>
