--- a/src/app/homepage/benefits/benefits.component.scss
+++ b/src/app/homepage/benefits/benefits.component.scss
@@ -24,14 +24,18 @@
   height: 160px;
   margin-left: 160px;
   margin-right: 160px;
-  margin-top: 40px;
+  margin-top: 82px;
 }
 
 
 .box {
   width: 160px;
   height: 160px;
-  background-color: #ffffff;
+  // background-color: #ffffff;
+  img{
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 .be_actual {
